--- a/public/main/template/default/gradebook/custom_certificate.html.twig
+++ b/public/main/template/default/gradebook/custom_certificate.html.twig
@@ -9,30 +9,30 @@
 <table border="0" cellpadding="0" cellspacing="0">
     <tr>
         <td colspan="3">
-            <img src="{{ url('index') ~ 'build/css/themes/' ~ stylesheet_name ~ '/images/cuadro.png' }}">
+            <img src="{{ theme_asset('images/cuadre.png') }}">
         </td>
     </tr>
     <tr>
         <td>
-            <img src="{{ url('index') ~ 'build/css/themes/' ~ stylesheet_name ~ '/images/cuadro.png' }}">
+            <img src="{{ theme_asset('images/cuadro.png') }}">
         </td>
         <td>
             <table border="0" bgcolor="#92c647" cellpadding="0" cellspacing="0" align="center" width="100%">
                 <tr>
-                    <td style="border-collapse: collapse; padding: 0;" bgcolor="#92c647"><img src="{{ url('index') ~ 'build/css/themes/' ~ stylesheet_name ~ '/images/header_top.png' }}" style="display: block;"></td>
+                    <td style="border-collapse: collapse; padding: 0;" bgcolor="#92c647"><img src="{{ theme_asset('images/header_top.png') }}" style="display: block;"></td>
                 </tr>
                 <tr>
                     <td style="border-collapse: collapse; padding: 0;">
                         <table border="0" cellspacing="0" cellpadding="0" width="100%">
                             <tr>
                                 <td style="border-collapse: collapse; padding: 0;" bgcolor="#92c647" width=58 height=91>
-                                    <img src="{{ url('index') ~ 'build/css/themes/' ~ stylesheet_name ~ '/images/lado-b.png' }}" style="display:block;">
+                                    <img src="{{ theme_asset('images/lado-b.png') }}" style="display:block;">
                                 </td>
                                 <td bgcolor="#92c647" width=700 height=91 style="font-family:CourierSans-Light; font-weight: bold; line-height: 47px; color:#FFF; padding-bottom: 10px; font-size: 45px;">
                                     {{ 'Certificate of participation' | trans | raw }}
                                 </td>
                                 <td style="border-collapse: collapse; padding: 0;" bgcolor="#92c647" width=58 height=91>
-                                    <img src="{{ url('index') ~ 'build/css/themes/' ~ stylesheet_name ~ '/images/lado-header.png' }}" style="display:block;">
+                                    <img src="{{ theme_asset('/images/lado-header.png') }}" style="display:block;">
                                 </td>
                             </tr>
                         </table>
@@ -42,7 +42,7 @@
                     <td style="border-collapse: collapse; padding: 0;">
                         <table bgcolor="#FFFFFF" border="0" cellspacing="0" cellpadding="0" width="100%" height=900>
                             <tr>
-                                <td bgcolor="#92c647" height=755 style="border-collapse: collapse; padding: 0;"><img src="{{ url('index') ~ 'build/css/themes/' ~ stylesheet_name ~ '/images/lado-a.png' }}" style="display:block;"></td>
+                                <td bgcolor="#92c647" height=755 style="border-collapse: collapse; padding: 0;"><img src="{{ theme_asset('images/lado-a.png') }}" style="display:block;"></td>
                                 <td height=755 style="font-family:CourierSans-Light; line-height: 22px; color:#40ad49; padding: 40px; font-size: 18px;" valign="top">
                                     <h3 style="color: #672290; font-size: 24px;">
                                         {{ complete_name }}
@@ -75,7 +75,7 @@
                                     <br />
                                 </td>
                                 <td height=755 bgcolor="#92c647" style="border-collapse: collapse; padding: 0;">
-                                    <img src="{{ url('index') ~ 'build/css/themes/' ~ stylesheet_name ~ '/images/lado-b.png' }}" style="display:block;">
+                                    <img src="{{ theme_asset('images/lado-b.png') }}" style="display:block;">
                                 </td>
                             </tr>
                         </table>
@@ -86,12 +86,12 @@
                         <table border="0" cellspacing="0" cellpadding="0" width="100%" height="91">
                             <tr>
                                 <td bgcolor="#92c647" width=58 height=91 style="border-collapse: collapse; padding: 0;">
-                                    <img src="{{ url('index') ~ 'build/css/themes/' ~ stylesheet_name ~ '/images/lado-b.png' }}"  style="display:block;"></td>
+                                    <img src="{{ theme_asset('images/lado-b.png') }}"  style="display:block;"></td>
                                 <td bgcolor="#92c647" width=500 height=91 style="border-collapse: collapse; padding: 0; font-family:CourierSans-Light; line-height: 18px; color:#FFF;">
                                     {{ 'Certificate Footer' | trans | raw }}
                                 </td>
                                 <td bgcolor="#92c647" width=245 height=91 style="border-collapse: collapse; padding: 0;">
-                                    <img src="{{ url('index') ~ 'build/css/themes/' ~ stylesheet_name ~ '/images/lado-footer.png' }}" style="display:block; "></td>
+                                    <img src="{{ theme_asset('images/lado-footer.png') }}" style="display:block; "></td>
                             </tr>
                         </table>
                     </td>
@@ -99,12 +99,12 @@
             </table>
         </td>
         <td>
-            <img src="{{ url('index') ~ 'build/css/themes/' ~ stylesheet_name ~ '/images/cuadro.png' }}">
+            <img src="{{ theme_asset('images/cuadro.png') }}">
         </td>
     </tr>
     <tr>
         <td colspan="3">
-            <img src="{{ url('index') ~ 'build/css/themes/' ~ stylesheet_name ~ '/images/cuadro.png' }}">
+            <img src="{{ theme_asset('images/cuadro.png') }}">
         </td>
     </tr>
 </table>
