--- a/src/CoreBundle/Resources/views/Work/comments.html.twig
+++ b/src/CoreBundle/Resources/views/Work/comments.html.twig
@@ -33,7 +33,7 @@
                         }}"
                     />
 
-                    {{ comment.resourceNode.resourceFile }}
+                    {{ comment.resourceNode.firstResourceFile }}
                     </a>
 {#                    {% if is_allowed_to_edit %}#}
 {#                        <a href="{{ comment.delete_file_url }}">#}
